# ansible-collection-toolchain

./: .ansible-lint  .gitignore  README.md  galaxy.yml  pyproject.toml
meta/: runtime.yml
roles/proton_pass/: README.md
roles/proton_pass/defaults/: main.yml
roles/proton_pass/handlers/: main.yml
roles/proton_pass/meta/: main.yml
roles/proton_pass/molecule/default/: converge.yml  molecule.yml  verify.yml
roles/proton_pass/molecule/default/inventory/: hosts.yml
roles/proton_pass/molecule/default/inventory/group_vars/: molecule.yml
roles/proton_pass/tasks/: main.yml
roles/proton_pass/tests/: play.yml
roles/proton_pass/vars/: main.yml
